--- a/Calculation/Base.lproj/Main.storyboard
+++ b/Calculation/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="my friends.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="bYe-NK-yrE">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flower.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bYe-NK-yrE">
                                 <rect key="frame" x="6" y="-16" width="362" height="844"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -233,6 +233,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="my friends.JPG" width="960" height="1280"/>
+        <image name="flower.jpg" width="564" height="1001"/>
     </resources>
 </document>
